--- a/giF0S_Project/Styles/index.css
+++ b/giF0S_Project/Styles/index.css
@@ -309,6 +309,7 @@ body #content #searchBox::placeholder {
 }
 
 body #content #buttonSearch {
+  cursor: pointer;
   text-align: center;
   margin-left: 8px;
   width: 102px;
@@ -353,21 +354,22 @@ body #content #buttonSearchInput {
 }
 
 body #content #subMenuSearch {
-  position: relative;
+  display: none;
+  position: absolute;
   z-index: 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
+  width: 83%;
   height: 160px;
-  -webkit-transform: translateY(15px);
-          transform: translateY(15px);
-  display: none;
+  -webkit-transform: translateY(74%);
+          transform: translateY(74%);
+  margin-left: 1px;
 }
 
 body #content #subMenuSearch button {
-  width: 87.9166%;
+  width: 88%;
   height: 34px;
   margin-left: 1.3333%;
   font-size: 16px;
@@ -464,6 +466,7 @@ body #content #gifSuggest p {
 }
 
 body #content #gifSuggest .buttonCloseGif {
+  cursor: pointer;
   position: relative;
   z-index: 4;
   bottom: 43px;
@@ -474,6 +477,7 @@ body #content #gifSuggest .buttonCloseGif {
 }
 
 body #content #gifSuggest .seeMoreButton {
+  cursor: pointer;
   position: relative;
   z-index: 5;
   font-size: 14px;
