--- a/giF0S_Project/Styles/index.scss
+++ b/giF0S_Project/Styles/index.scss
@@ -216,6 +216,7 @@ body {
 
         //THESE ARE THE STYLES OF THE SEARCH BUTTON AND THE CLASS WHOSE STYLES ARE APPLIED WHEN THE USER ARE ENTERING A TEXT FOR SEARCH
         #buttonSearch {
+            cursor: pointer;
             text-align: center;
             margin-left: 8px;
             width: 102px;
@@ -256,16 +257,17 @@ body {
 
         //THESE ARE THE STYLES OF THE SUBMENU THAT IS SHOWN AFTER THE CLICK OVER THE SEARCH BUTTON
         #subMenuSearch {
-            position: relative;
+            display: none;
+            position: absolute;
             z-index: 2;
             flex-direction: column;
-            width: 100%;
-            height: 160px;
-            transform: translateY(15px);
-            display: none;
+            width: 83%;
+            height: 160px;         
+            transform: translateY(74%);
+            margin-left: 1px;            
 
             button {
-                width: 87.9166%;
+                width: 88%;
                 height: 34px;
                 margin-left: 1.3333%;
                 font-size: 16px;
@@ -342,6 +344,7 @@ body {
             }
 
             .buttonCloseGif {
+                cursor: pointer;
                 position: relative;
                 z-index: 4;
                 bottom: 43px;
@@ -352,6 +355,7 @@ body {
             }
 
             .seeMoreButton {
+                cursor: pointer;
                 position: relative;
                 z-index: 5;
                 font-size: 14px;
