--- a/giF0S_Project/Styles/index.css
+++ b/giF0S_Project/Styles/index.css
@@ -69,6 +69,9 @@ body #content #buttonZone div #buttonOne {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-right: 1.1137%;
   height: 36px;
   width: 144px;
@@ -78,18 +81,6 @@ body #content #buttonZone div #buttonOne {
   -ms-grid-column: 2;
       grid-column-start: 2;
   grid-column-end: 2;
-}
-
-body #content #buttonZone div #buttonOne a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
 }
 
 body #content #buttonZone div #buttonTwo {
@@ -394,11 +385,15 @@ body #content #subMenuSearch #Result3 {
 
 body #content #buttonsContainer {
   display: none;
+  overflow: hidden;
   height: 34px;
+  margin-top: 12px;
+  padding-left: 20px;
 }
 
 body #content #buttonsContainer button {
-  width: 100px;
+  float: left;
+  width: 120px;
   height: 36px;
   font-size: 14px;
   font-weight: 400;
