--- a/giF0S_Project/Styles/PreCatch/preCatch.scss
+++ b/giF0S_Project/Styles/PreCatch/preCatch.scss
@@ -10,7 +10,6 @@ $primaryfont: "Chakra Petch";
 body {
     margin: 0%;
     padding: 0%;
-    border: 0%;
     background-color: rgb(250, 241, 249);
 
     //THIS SECTION CONTENT THE TOP BAR WITH ITS GRADIENT STYLE
@@ -57,6 +56,7 @@ body {
         display: flex;
         justify-content: center;
 
+        //STYLES OF THE WINDOW IN THE PRE CATCH SECTION
         #menuContainer {
             position: relative;
             width: 47.5%;
@@ -141,6 +141,7 @@ body {
             button {
                 align-self: center;
                 display: flex;
+                justify-content: center;
                 cursor: pointer;
                 width: 133px;
                 height: 36px;
@@ -207,20 +208,22 @@ body {
         }
     }
 
+    //STYLES OF THE SHOW MY GIFS SECTION
     #containerGifs {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;        
+        flex-wrap: wrap;
         margin-left: 6.9%;
 
-        div {        
+        div {
             width: 21.7%;
             height: 298%;
-            margin-bottom: 17px;          
+            margin-bottom: 17px;
 
             &:not(:nth-child(4)) {
                 margin-right: 16px;
             }
+
             img {
                 width: 100%;
                 height: 298px;
